# pde-app

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.agents/: AGENTS.md
docs/: pde-architecture-spec.md
pde_app/: config.py  models.py
pde_app/db/: connection.py  migrate.py  repository.py
pde_app/db/migrations/: 001_init_schema.sql  002_add_sessions_and_observations.sql
pde_app/mind/: daemon.py  pipeline.py
pde_app/mouth/: prompt_builder.py  runtime.py
pde_app/services/: llm.py  vector.py
tests/: conftest.py  test_daemon.py  test_db.py  test_pipeline.py  test_prompt.py
