[project]
name = "pde_app"
version = "0.1.0"
description = "Persistent Digital Entity (PDE) Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.1.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pde_app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

